force-app/main/default/objects/Account/fields/Allignment_readiness__c.field-meta.xml
<CustomField>
    <fullName>Allignment_readiness__c</fullName>
    <description>wil store how many  fields from the Territory relevant fields are populated</description>
    <label>Allignment readiness</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>