force-app/main/default/objects/Account/fields/FreezeAlignment__c.field-meta.xml
<CustomField>
    <fullName>FreezeAlignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If  set to TRUE  do no longer attempt to Set Territory Name</description>
    <label>FreezeAlignment</label>
    <type>Checkbox</type>
</CustomField>