force-app/main/default/objects/Account/fields/Name4Terr__c.field-meta.xml
<CustomField>
    <fullName>Name4Terr__c</fullName>
    <description>First char of the Name. Needed for TerrName calculation</description>
    <label>Name4Terr</label>
    <length>1</length>
    <type>Text</type>
</CustomField>