force-app/main/default/objects/Account/fields/Need_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Need_Alignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Alignment</label>
    <type>Checkbox</type>
</CustomField>