force-app/main/default/objects/Account/fields/ShippingPostalCode4Terr__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode4Terr__c</fullName>
    <description>needed by the TerritoryName calculation to store fraction of Zip code</description>
    <label>ShippingPostalCode4Terr</label>
    <length>5</length>
    <type>Text</type>
</CustomField>