force-app/main/default/objects/Account/fields/temp_AllocatorID__c.field-meta.xml
<CustomField>
    <fullName>temp_AllocatorID__c</fullName>
    <description>used in Terr alignment logic</description>
    <label>temp AllocatorID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>