force-app/main/default/objects/Account/fields/TerritoryName_Suggested__c.field-meta.xml
<CustomField>
    <fullName>TerritoryName_Suggested__c</fullName>
    <description>Suggeste territory name</description>
    <label>TerritoryName Suggested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIND SUGGESTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>