force-app/main/default/objects/Account/fields/Top_Domestic_Parent_Billing_Location__c.field-meta.xml
<CustomField>
    <fullName>Top_Domestic_Parent_Billing_Location__c</fullName>
    <description>is the highest Account Location in the same country</description>
    <formula>IF(Parent.ShippingCountry = ShippingCountry
,IF(Parent.Parent.ShippingCountry = ShippingCountry
,IF(Parent.Parent.Parent.ShippingCountry = ShippingCountry
,IF(Parent.Parent.Parent.Parent.ShippingCountry = ShippingCountry
,IF(Parent.Parent.Parent.Parent.Parent.ShippingCountry = ShippingCountry
,
IF(
  Parent.Parent.Parent.Parent.Parent.ShippingState &lt;&gt; NULL,
  Parent.Parent.Parent.Parent.Parent.ShippingState,
  Parent.Parent.Parent.Parent.Parent.ShippingCountry
  )
,
IF(
  Parent.Parent.Parent.Parent.ShippingState &lt;&gt; NULL,
  Parent.Parent.Parent.Parent.ShippingState,
  Parent.Parent.Parent.Parent.ShippingCountry
  )
)
,
IF(
  Parent.Parent.Parent.ShippingState &lt;&gt; NULL,
  Parent.Parent.Parent.ShippingState,
  Parent.Parent.Parent.ShippingCountry
  )
)
,
IF(
  Parent.Parent.ShippingState &lt;&gt; NULL,
  Parent.Parent.ShippingState,
  Parent.Parent.ShippingCountry
  )
)
,
IF(
  Parent.ShippingState &lt;&gt; NULL,
  Parent.ShippingState,
  Parent.ShippingCountry
  )
)
,
IF(
  ShippingState &lt;&gt; NULL,
  ShippingState,
  ShippingCountry
  )
)</formula>
    <label>Top DomesticParent Billing Location</label>
    <type>Text</type>
</CustomField>