force-app/main/default/objects/Account/fields/Top_Domestic_Parent_FTE__c.field-meta.xml
<CustomField>
    <fullName>Top_Domestic_Parent_FTE__c</fullName>
    <description>used in soe of the Territory Rules</description>
    <formula>IF(Parent.ShippingCountry = ShippingCountry
,IF(Parent.Parent.ShippingCountry = ShippingCountry
   ,IF(Parent.Parent.Parent.ShippingCountry = ShippingCountry
       ,IF(Parent.Parent.Parent.Parent.ShippingCountry = ShippingCountry
	      ,IF(Parent.Parent.Parent.Parent.Parent.ShippingCountry = ShippingCountry
		      ,Parent.Parent.Parent.Parent.Parent.Account_FTE__c
			  ,Parent.Parent.Parent.Parent.Account_FTE__c
			  )
          ,Parent.Parent.Parent.Account_FTE__c		  
		  ) 
	   ,Parent.Parent.Account_FTE__c
	   )
   ,Parent.Account_FTE__c
   )
,Account_FTE__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top_Domestic_Parent_FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>