force-app/main/default/objects/Account/fields/Top_Domestic_Parent_Org_Size__c.field-meta.xml
<CustomField>
    <fullName>Top_Domestic_Parent_Org_Size__c</fullName>
    <description>used in some of the Territory Rules</description>
    <formula>IF(Parent.ShippingCountry = ShippingCountry
,IF(Parent.Parent.ShippingCountry = ShippingCountry
   ,IF(Parent.Parent.Parent.ShippingCountry = ShippingCountry
       ,IF(Parent.Parent.Parent.Parent.ShippingCountry = ShippingCountry
	      ,IF(Parent.Parent.Parent.Parent.Parent.ShippingCountry = ShippingCountry
		      ,Parent.Parent.Parent.Parent.Parent.System_Org_Size__c 
			  ,Parent.Parent.Parent.Parent.System_Org_Size__c 
			  )
          ,Parent.Parent.Parent.System_Org_Size__c 
		  ) 
	   ,Parent.Parent.System_Org_Size__c 
	   )
   ,Parent.System_Org_Size__c 
   )
,System_Org_Size__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Domestic Parent OrgSize</label>
    <type>Text</type>
</CustomField>