force-app/main/default/objects/Account/fields/Top_Parent_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Top_Parent_Billing_Country__c</fullName>
    <description>Outputs the Shipping Country of the highest parent Accounts&#39; shipping location, up to 5 Account parent lookup hierarchy levels. ES-21128</description>
    <formula>IF(
  NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Id)),
  IF(
    ShippingCountry &lt;&gt; NULL,
    Parent.Parent.Parent.Parent.Parent.ShippingCountry,
    Parent.Parent.Parent.Parent.Parent.ShippingCountry
  ),
  IF(
    NOT(ISBLANK(Parent.Parent.Parent.Parent.Id)),
    IF(
      Parent.Parent.Parent.Parent.ShippingCountry &lt;&gt; NULL,
      Parent.Parent.Parent.Parent.ShippingCountry,
      Parent.Parent.Parent.Parent.ShippingCountry
    ),
    IF(
      NOT(ISBLANK(Parent.Parent.Parent.Id)),
      IF(
        Parent.Parent.Parent.ShippingCountry &lt;&gt; NULL,
        Parent.Parent.Parent.ShippingCountry,
        Parent.Parent.Parent.ShippingCountry
      ),
      IF(
        NOT(ISBLANK(Parent.Parent.Id)),
        IF(
          Parent.Parent.ShippingCountry &lt;&gt; NULL,
          Parent.Parent.ShippingCountry,
          Parent.Parent.ShippingCountry
        ),
        IF(
          NOT(ISBLANK(Parent.Id)),
          IF(
            Parent.ShippingCountry &lt;&gt; NULL,
            Parent.ShippingCountry,
            Parent.ShippingCountry
          ),
          IF(
            ShippingCountry &lt;&gt; NULL,
            ShippingCountry,
            ShippingCountry
          )
        )
      )
    )
  )
)</formula>
    <inlineHelpText>Outputs the Shipping Country of the highest parent Accounts&#39; shipping location, up to 5 Account parent lookup hierarchy levels.</inlineHelpText>
    <label>Top Parent Shipping Country</label>
    <type>Text</type>
</CustomField>